--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title> Guan Wu / Beginner</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="<link href='http://fonts.googleapis.com/css?family=Indie+Flower|Architects+Daughter|Changa+One:400,400italic' rel='stylesheet' type='text/css'>">
      <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -26,7 +27,7 @@
           <li>
             <a href="img/numbers-01.jpg">
               <img src="img/numbers-01.jpg" alt="">
-              <p>Experimentation with color and texture.....</p>
+              <p>Experimentation with color and texture.</p>
              </a>
           </li>
           <li>
