--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title> Guan Wu / Beginner</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="<link href='http://fonts.googleapis.com/css?family=Indie+Flower|Architects+Daughter|Changa+One:400,400italic' rel='stylesheet' type='text/css'>">
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Shadows+Into+Light' rel='stylesheet' type='text/css'>
      <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -23,7 +23,7 @@
     </header>
     <div id="wrapper">
       <section>
-        <ul>
+        <ul id="gallery">
           <li>
             <a href="img/numbers-01.jpg">
               <img src="img/numbers-01.jpg" alt="">
@@ -57,9 +57,9 @@
       </section>
       <footer>
         <a href="http://twitter.com/nickrp">
-          <img src="img/twitter-wrap.png" alt="Twitter Logo">
+          <img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon">
           </a>
-        <a href="http://facebook.com/eddie peng"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
+        <a href="http://facebook.com/eddie peng"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <p>&copy; 2015 Guan Wu.</p>
       </footer>
       </div>
