8/10 Finish the web page.

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Lobster|Shadows+Into+Light' rel='stylesheet' type='text/css'>
      <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
@@ -26,7 +28,7 @@
         <img src="img/mi.jpg" alt=" Photograph of Minions" class="profile-photo">
        <h3>About</h3>
         <p>Hi, This is Guan! This is my first Webpage, learning from treehouse with Nick Pettit.</p>
-        <p>If you would like to learn it too, you can check on his Twitter, his username is <a href="http://twitter.com/nickrp">@nickrp</a>.</p>
+        <p>If you would like to learn it too, you can check on his Twitter, his username is <a href="http://twitter.com/nickrp">@nickrp</a></p>
       </section>
       <footer>
         <a href="http://twitter.com/nickrp">
